# backup

./: .gitignore  Cargo.toml  backup.sh
.cargo/: config
migrations/2023-05-11-161412_create_jobs/: down.sql  up.sql
src/: db.rs  jobs.rs  main.rs  routes.rs  schema.rs  util.rs
src/db/: models.rs  schema.rs  traits.rs  wrapper.rs
src/routes/: jobs.rs  restore.rs
src/util/: dates.rs  folders.rs  shell.rs
