[package]
name = "backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"]}
colored = "2.0.0"
dotenv = "0.15.0"
tokio = { version = "1.12.0", features = ["full"] }
tokio-cron-scheduler = "*"
actix-web = "4"
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "1.0.95"
derive_more = "0.99.17"
diesel = { version = "2.0.4", features = ["sqlite"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
anyhow = "1.0.44"
serde_valid = "0.16.1"
